# windmill-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  command-design.md  security.md
skills/wmx/: SKILL.md
skills/wmx/references/: output-modes.md  secrets-and-resources.md
src/wmx/: __init__.py  __main__.py  bundler.py  cli.py  config.py  errors.py  output.py  search.py  state.py  utils.py
src/wmx/client/: __init__.py  apps.py  auth.py  docs.py  flows.py  http.py  jobs.py  resources.py  schedules.py  scripts.py  variables.py
src/wmx/commands/: __init__.py  apps.py  common.py  config_cmd.py  docs.py  flows.py  jobs.py  queue.py  resources.py  schedules.py  scripts.py  variables.py
tests/: conftest.py
tests/fixtures/help/: root.txt  scripts.txt
tests/integration/: test_live_smoke.py
tests/unit/: test_config.py  test_help.py  test_jobs_wait.py  test_output.py  test_preview_cli.py  test_search.py  test_variables_cli.py
